Agregado uso de schemas json en el OPEN API y uso de generacion de datos de prueba con Faker
